# Tokio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.engine  EXECUTION_PLAN.md  Makefile  PLAN.md  PLANO_DISCOVERY_V9.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: discovery_config.yaml  discovery_config.yaml.bak-v14  settings.yaml
deploy/: Caddyfile  apply_supabase_migrations.sh  autodeploy.sh  backup_sqlite.sh  bootstrap_vps.sh  engine-processes.yaml
docs/: CURSOR_UPDATES.md  HANDOFF_HERMES.md  HERMES_UPDATES.md  discovery_calibration_playbook.md  discovery_changelog.md  discovery_logic_v9.md  discovery_v2_plan.md
engine/: __init__.py  cli.py  replicator_main.py  supervisor.py
skill/: SKILL.md
tests/: conftest.py  test_analyze_single.py  test_archive_e2e.py  test_backtest.py  test_backup_script.py  test_base_runner.py  test_chaos_runner_isolation.py  test_copy_trade.py  test_copy_trade_direction.py  test_demote_cancels_orders.py  test_discovery.py  test_discovery_funnel.py  test_discovery_metrics.py  test_discovery_scheduler.py  test_discovery_v2_metrics.py  test_docs_coverage.py  test_executor_switch.py  test_executor_wallet_guardrail.py  test_gateway.py  test_hl_adapter_balances.py  test_hl_adapter_margin.py  test_hl_adapter_slippage.py  test_hl_agents.py  test_hl_data.py  test_hl_keyring.py  test_ledger.py  test_ledger_hydrate.py  test_migration_cleanup.py  test_partial_fill.py  test_reclassify_wallets.py  test_replication_outage.py  test_risk.py  test_risk_enforcer.py  (+7 more)
(+249 files in other folders)
