[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokio-engine"
version = "0.1.0"
description = "Tokio - deterministic crypto trading engine (gateway + strategy runners)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "websockets>=12.0",
    "hyperliquid-python-sdk>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
